--- a/client/components/ProductsComponents/ProductsList/ProductsList.module.css
+++ b/client/components/ProductsComponents/ProductsList/ProductsList.module.css
@@ -8,11 +8,19 @@
 	grid-template-columns: repeat(4, 1fr);
 }
 
+.notFoundText {
+	margin: 120px 40px 0 40px;
+
+	color: var(--darkLight);
+
+	font-weight: 500;
+}
+
 .spinnerDiv {
 	display: grid;
 
 	width: 100%;
-	margin: 120px 0;
+	margin: 220px 0;
 	justify-items: center;
 }
 
@@ -42,8 +50,9 @@
 		gap: 10px;
 	}
 
-	.spinnerDiv {
-		margin-top: 110px;
+	.notFoundText {
+		margin: 120px 20px 0 20px;
+		margin-top: 100px;
 	}
 }
 
@@ -51,5 +60,9 @@
 	.productsList {
 		margin-top: 90px;
 		grid-template-columns: auto;
+	}
+
+	.notFoundText {
+		margin-top: 90px;
 	}
 }
