--- a/client/components/ProductsComponents/ProductsList/ProductsList.module.css
+++ b/client/components/ProductsComponents/ProductsList/ProductsList.module.css
@@ -2,7 +2,8 @@
 	display: grid;
 
 	width: calc(100% - 80px);
-	margin-top: 120px;
+	height: fit-content;
+	margin-top: 40px;
 	padding: 0 40px 40px 40px;
 	gap: 20px;
 	grid-template-columns: repeat(4, 1fr);
@@ -45,7 +46,7 @@
 @media (max-width: 580px) {
 	.productsList {
 		width: calc(100% - 40px);
-		margin-top: 100px;
+		margin-top: 20px;
 		padding: 0 20px 30px 20px;
 		gap: 10px;
 	}
@@ -58,11 +59,6 @@
 
 @media (max-width: 300px) {
 	.productsList {
-		margin-top: 90px;
 		grid-template-columns: auto;
-	}
-
-	.notFoundText {
-		margin-top: 90px;
 	}
 }
